--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,47 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Google OAuth2</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/app.css">
+  <link rel="icon" type="image/png" href="image/checkBoxIcon.ico">
+
+	<!-- Theme Made By www.w3schools.com - No Copyright -->
+	<title>CPP Calendar</title>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="567625698601-1tm35nqtjfp2hn2mpav51po9kl9loq90.apps.googleusercontent.com">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Checklist CSS -->
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="home-style.css">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+
+    <!-- jQuery/Bootstrap/Google js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 </head>
 
-<body ng-app="GoogleOAuth2" ng-controller="AppCtrl" ng-cloak>
-<div class="container" style="margin-top: 50px;">
-    <!-- Login panel -->
-    <div class=" col-md-4 col-md-offset-4">
-        <div class="panel panel-default" ng-show="!user">
-            <div class="panel-heading">Google login with OAuth2</div>
-            <div class="panel-body">
-                <div class="col-md-12">
-                    <a class="btn btn-default" href="/google/login">Google Login</a>
-                </div>
-            </div>
-        </div>
-        <!-- End Login panel -->
+<body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
 
-        <!-- Home panel.It will visible after successfull login -->
-        <div class="panel panel-default" ng-show="user">
-            <div class="panel-heading">
-                <img class="p-img" alt="" ng-src="{{user.userAuthentication.details.picture}}"> Name: {{user.name}}
-            </div>
-            <div class="panel-body">
-                <div class="col-md-12">Email: {{user.userAuthentication.details.email}}</div>
-                <div class="col-md-12">
-                    <a href="#" class="btn btn-default margin-top-5"
-                       ng-click="logout()"> Logout </a>
-                </div>
-            </div>
-        </div>
-        <!-- End Home Panel -->
-
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="/">
+        CPP Calendar
+      </a>
     </div>
-</div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">HOME</a></li>
+        <li><a href="checklist.html">ADD</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-<!-- Including Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/controller.js"></script>
+
+	<!-- Container (HOME Section) -->
+	<div id="home" class="text-center">
+		<div class="carousel-inner" class="text-center">
+			<img src="image/Tileable.png" alt="home-picture" style="width: 100%;">
+			<form action="/login/google">
+				<button id="text" onclick="submit" class="loginBtn loginBtn--google">Log in with Google</button>
+			</form>
+		</div>
+	</div>
+    
+ 	<!-- Container (HOW TO Section) -->
+	<div id="how-to" class="text-center">
+		<div class="container" class="text-center">
+            <h3><b>HOW TO USE</b></h3>
+            <h2>Step 1</h2>
+            <p>Log into Google and give us permission to add events to your Google Calendar</p>
+            <h2>Step 2</h2>
+            <p>Select the organizations that you would like to receive events from</p>
+            <h2>Step 3</h2>
+            <p>See the schedules of your selected organizations automatically added to your Google Calendar</p>
+		</div>
+	</div>   
+
+	<footer class="text-center">
+  <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br>
+  <p>&copy; Hit or Miss 2017 <br>
+    <a href="https://www.w3schools.com" data-toggle="tooltip">Theme Design</a></p> 
+</footer>
+
+<script src="homepage.js"></script>
+<script src="checklistScript.js"></script>
+
 </body>
 </html>
